--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -1,3 +1,13 @@
-<h1>bookers2</h1>
-<p>aaa
-</p>
+<h1>New book</h1>
+<!-- form_with部分 -->
+<%= form_with model: book, local:true do |f| %>
+
+  <h4>title</h4>
+  <%= f.text_field :title %>
+
+  <h4>Opinion</h4>
+  <%= f.text_area :body %>
+
+  <%= f.submit 'Create Book' %>
+
+<% end %>
