--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,15 @@
-<h1>Users#edit</h1>
-<p>Find me in app/views/users/edit.html.erb</p>
+<h2>User info</h2>
+<%= form_with model:@user, local:true do |f| %>
+
+  <label for="inputName">Name</label>
+  <%= f.text_field :name, autofocus: true, id:"inputName"%>
+
+  <label for="inputImage">Image</label>
+  <%= attachment_image_tag @user, :profile_image, :fill, 60, 60 %>
+  <%= f.attachment_field :profile_image, placeholder: "プロフィール画像" %>  
+  
+  <label for="inputintroduction">introduction</label>
+  <%= f.text_area :introduction, autofocus: true, id:"inputName"%>
+  
+  <%= f.submit "変更を保存" %>
+<% end %>
