--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,13 +1,8 @@
-<h1>Bookers2</h1>
+<%= render 'books/list', book: @book, user: @user %>
+
+<h1>Books</h1>
 
 <% @books.each do |book| %>
-  <p>Bookers2</p>
-  <span>タイトル<%= book.title %></span>
+  <span>タイトル:<%= book.title %></span>
   <span>本文: <%= book.body %></span>
-
 <% end %>
-
-
-<p>aaaaaaaa</p>
-
-<%= render 'books/list', book: @book, user: @user %>
