--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,2 +1,13 @@
-<h1>Books#show</h1>
-<p>Find me in app/views/books/show.html.erb</p>
+<%= render 'books/list', book: @booknew, user: @user %>
+
+<h1>Book detail</h1>
+<!--@book.userは本を投稿した人の画像を出すので@userではダメ-->
+<p><%= attachment_image_tag @book.user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %></p>
+<p><%= @book.title %></p>
+<p><%= @book.body %></p>
+<p><%= @user.name %></p>
+
+<% if @book.user == current_user %>
+  <%= link_to "edit", edit_book_path(@book) %>
+  <%= link_to "delete", book_path(@book), method: :delete %>
+<% end %>
