--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,12 +4,51 @@
     <title>Bookers2</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
+    <h4>Bookers</h4>
+    <% if user_signed_in? %>
+      <ul>
+        <%= link_to "Home", user_path(current_user.id) %>
+      </ul>
+      
+      <ul>
+        <%= link_to "Users", users_path %>
+      </ul>
+      
+      <ul>
+        <%= link_to "Books", books_path %>
+      </ul>
+      
+      <ul>
+        <%= link_to "logout", destroy_user_session_path, method: :delete %>
+      </ul>
+    <% else %>
+      <ul>
+       <%= link_to "Home", root_path %>
+      </ul>
+      
+      <ul>
+       <%= link_to "About", home_about_path %>
+      </ul>
+      
+      <ul>
+       <%= link_to "Sign up", new_user_registration_path %>
+      </ul>
+      
+      <ul>
+      <%= link_to "login", new_user_session_path %>
+
+      </ul>
+
+    <% end %>
+
     <%= yield %>
   </body>
+  <p>CopyRight Infratop.inc</p>
 </html>
