--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,6 @@
-<%= render 'books/list', user: @user %>
+<%= render 'books/list', book: @book, user: @user %>
+
+<% @books.each do |book| %>
+ <span>Title: <%= book.title %></span>
+ <span>Opinion: <%= book.body %></span>
+<% end %>
