--- a/app/views/tops/top.html.erb
+++ b/app/views/tops/top.html.erb
@@ -1,5 +1,19 @@
-<h2>welcome to Bookers !!</h2>
-<p>In Bookers,<br>
-you can share and exchange your opinions , inpressions , and emotions<br>
-about various books!
-</p>
+<div class = "container">
+  <div class = "row">
+    <div class="mx-auto" style="width: 720px;">
+     <h2>welcome to Bookers !!</h2>
+      <p>In Bookers,<br>
+       you can share and exchange your opinions , inpressions , and emotions<br>
+       about various books!
+      </p>
+       <div class = "botn-log-in">
+        <%= link_to "Log In", new_user_session_path %>
+       </div>
+       <div class = "botn-sign-up">
+       <%= link_to "Sign Up", new_user_registration_path %>
+       </div>
+         
+
+    </div>
+  </div>
+</div>
