--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,31 +11,37 @@
   </head>
 
   <body>
-    <h4>Bookers</h4>
-    <% if user_signed_in? %>
-      <ul>
+  <div class="container">
+    <div class="row">
+     <div class="cols-4 col-md-2">
+       <h4>Bookers</h4>
+     </div>
+        
+     <div class="cols-6 col-md-6"></div>
+      <% if user_signed_in? %>
+       <ul>
         <%= link_to "Home", user_path(current_user.id) %>
-      </ul>
+       </ul>
       
-      <ul>
+       <ul>
         <%= link_to "Users", users_path %>
-      </ul>
+       </ul>
       
-      <ul>
+       <ul>
         <%= link_to "Books", books_path %>
-      </ul>
+       </ul>
       
-      <ul>
+       <ul>
         <%= link_to "logout", destroy_user_session_path, method: :delete %>
-      </ul>
-    <% else %>
-      <ul>
-       <%= link_to "Home", root_path %>
-      </ul>
+       </ul>
+      <% else %>
+       <ul>
+        <%= link_to "Home", root_path %>
+       </ul>
       
-      <ul>
-       <%= link_to "About", home_about_path %>
-      </ul>
+       <ul>
+        <%= link_to "About", home_about_path %>
+       </ul>
       
       <ul>
        <%= link_to "Sign up", new_user_registration_path %>
@@ -43,12 +49,23 @@
       
       <ul>
       <%= link_to "login", new_user_session_path %>
-
       </ul>
-
-    <% end %>
-
+    </div>
+     <% end %>
+     </div>
+    </div>
     <%= yield %>
   </body>
-  <p>CopyRight Infratop.inc</p>
+  
+  <fotter>
+   <div class = "container">
+    <div class = "row">
+     <div class = "col-9"> </div>
+     <div class = "col-3">
+      <p>CopyRight Infratop.inc</p>
+     </div>
+    </div>
+   </div>
+  </fotter>
+  
 </html>
