--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <%= render 'books/list', book: @book, user: @user %>
-
+<h1>Books</h1>
 <% @books.each do |book| %>
  <span>Title: <%= book.title %></span>
  <span>Opinion: <%= book.body %></span>
