--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -6,9 +6,9 @@
 
 
 <% @books.each do |book| %>
-  <span>タイトル:<%= book.title %></span>
-  <span>本文: <%= book.body %></span>
-  <%= link_to "show", book_path(book.id) %>
+ <p>image: <%= attachment_image_tag book.user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %></p>
+  <span>title <%= link_to book.title, book_path(book.id) %> </span>
+  <span>Opinion <%= book.body %></span>
   <!--(@book) %>-->
 
 <% end %>
