--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,8 +2,8 @@
 
 <h1>Users</h1>
 <% @users.each do |user| %>
-  <p><%= attachment_image_tag user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %></p>
-  <p>名前: <%= user.name %></p>
+  <p>image: <%= attachment_image_tag user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %></p>
+  <p>name: <%= user.name %></p>
   <%= link_to "show", user_path(user.id) %>
 
 <% end %>
