--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -4,7 +4,7 @@
   <h4>title</h4>
   <%= book.text_field :title %>
   <h4>Opinion</h4>
-  <%= book.text_field :body %>
+  <%= book.text_field :body %><br>
   
   <%= book.submit 'UpdeteBook' %>
 <% end %>
