--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,9 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
+  
+   <nav class="navbar navbar-dark bg-dark">
+
   <div class="container">
     <div class="row">
      <div class="cols-4 col-md-2">
@@ -54,8 +56,10 @@
      <% end %>
      </div>
     </div>
+   </div>
+  </nav>
     <%= yield %>
-  </body>
+
   
   <fotter>
    <div class = "container">
