--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -1,3 +1,6 @@
+
+  <div class = "col-xs-3">
+    
 <h1>User info</h1>
 
 
@@ -8,6 +11,14 @@
   <!--edit 編集部分-->
   <p><%= link_to "プロフィール編集", edit_user_path(user) %></p>
 
+<% if book.errors.any? %>
+          <%= book.errors.count %>件のエラーが発生しました
+          <% book.errors.full_messages.each do |message| %>
+            <%= message %>
+          <% end %>
+        <% end %>
+
+        
 
 <h1>New book</h1>
 <!-- form_with部分 -->
@@ -17,9 +28,11 @@
   <%= f.text_field :title %>
 
   <h4>Opinion</h4>
-  <%= f.text_area :body %>
+  <%= f.text_area :body %><br>
 
   <%= f.submit 'Create Book' %>
 
 <% end %>
 
+  </div>
+ 
