--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,15 +1,22 @@
-<h2>User info</h2>
+<div class = "container">
+ <div class = "row">
+  <div class = "col-xs-9">
+    <h2>User info</h2>
+
 <%= form_with model:@user, local:true do |f| %>
 
-  <label for="inputName">Name</label>
-  <%= f.text_field :name, autofocus: true, id:"inputName"%>
+  <label for="inputName">Name</label> 
+  <%= f.text_field :name, autofocus: true, id:"inputName"%> <br>
 
-  <label for="inputImage">Image</label>
+  <label for="inputImage">Image</label> <br>
   <%= attachment_image_tag @user, :profile_image, :fill, 60, 60 %>
-  <%= f.attachment_field :profile_image, placeholder: "プロフィール画像" %>  
+  <%= f.attachment_field :profile_image, placeholder: "プロフィール画像" %> <br>
   
-  <label for="inputintroduction">introduction</label>
-  <%= f.text_area :introduction, autofocus: true, id:"inputName"%>
+  <label for="inputintroduction">introduction</label> 
+  <%= f.text_area :introduction, autofocus: true, id:"inputName"%> <br>
   
   <%= f.submit "変更を保存" %>
 <% end %>
+  </div>
+ </div>
+</div>
