--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -1,16 +1,18 @@
 
-  <div class = "col-xs-3">
-    
-<h1>User info</h1>
+<div class = "col-xs-3">
+   <% if flash[:notice] %>
+    <p><%= flash[:notice] %></p>
+   <% end %>
 
-
+  <h1>User info</h1>
   <p><%= attachment_image_tag user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %></p>
   <p>neme：<%= user.name %></p>
   <p>introduction：<%= user.introduction %></p>
   
-  <!--edit 編集部分-->
-  <p><%= link_to "プロフィール編集", edit_user_path(user) %></p>
-
+  <%= link_to edit_user_path(user), class: 'btn btn-default' do %>
+    <i class="fas fa-wrench "></i> 
+  <% end %>
+ 
 <% if book.errors.any? %>
           <%= book.errors.count %>件のエラーが発生しました
           <% book.errors.full_messages.each do |message| %>
@@ -34,5 +36,6 @@
 
 <% end %>
 
-  </div>
  
+
+</div>
