--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,22 +1,26 @@
 <div class = "container">
  <div class = "row">
-  
+
 <%= render 'books/list', book: @book, user: @user %>
 
   <div class = "col-xs-9">
 
 <h1>Books</h1>
-<table>
- <tr>
-  <th> </th><th>title</th><th>Opinion</th>
- </tr>
+<table class="table">
+<thead>
+  <tr>
+    <th scope="col"> </th><th scope="col">title</th><th scope="col">Opinion</th>
+  </tr>
+</thead>
 
 <% @books.each do |book| %>
+<tbody>
 <tr>
   <td><span><%= attachment_image_tag book.user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %></span></td>
   <td><span> <%= link_to book.title, book_path(book.id) %> </span></td>
   <td><span> <%= book.body %></span></td>
 </tr>
+</tbody>
 <% end %>
 
 </table>
