--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,12 +1,17 @@
 <div class = "container">
  <div class = "row">
 
-<%= render 'books/list', book: @booknew, user: @user %>
+　　<%= render 'books/list', book: @booknew, user: @user %>
     
-   <div class = "col-xs-9">
+  <div class = "col-xs-9">
+　　<h1>Book detail</h1>
 
-<h1>Book detail</h1>
-<table>
+<table class="table">
+　　<thead>
+  　　<tr>
+    　<th scope="col"> </th><th scope="col"></th><th scope="col"></th><th scope="col"></th>
+  　　</tr>
+　　</thead>
  <tbody>
   <tr>
     <!--@book.userは本を投稿した人の画像を出すので@userではダメ-->
@@ -14,10 +19,9 @@
              <%= @user.name %></span></td>
    <td><span><%= @book.title %></span></td>
    <td><spna><%= @book.body %></span></td>
-
    <td> <span><% if @book.user == current_user %> </span> </td>
-   <td> <span><%= link_to "edit", edit_book_path(@book) %> </span></td>
-   <td> <span><%= link_to "delete", book_path(@book), method: :delete %></span></td>
+   <td> <span><%= link_to "Edit", edit_book_path(@book) %> </span></td>
+   <td> <span><%= link_to "Destroy", book_path(@book), method: :delete %></span></td>
    <% end %>
   </tr>
  </tbody>
