--- a/app/views/tops/top.html.erb
+++ b/app/views/tops/top.html.erb
@@ -1,8 +1,8 @@
 <div class = "container">
   <div class = "row">
     <div class="mx-auto" style="width: 720px;">
-     <h2>welcome to Bookers !!</h2>
-      <p>In Bookers,<br>
+     <h2>welcome to<i class="fas fa-book"></i> Bookers !!</h2>
+      <p>In <i class="fas fa-book"></i>Bookers,<br>
        you can share and exchange your opinions , inpressions , and emotions<br>
        about various books!
       </p>
