--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,66 +1,71 @@
 <!DOCTYPE html>
 <html>
   <head>
+   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+   <script src="https://kit.fontawesome.com/fc2857b7e6.js" crossorigin="anonymous"></script>
     <title>Bookers2</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">-->
+    <div class="social"></div>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  
-   <nav class="navbar navbar-dark bg-dark">
+<nav class= "navbar text-white bg-dark">
+ <div class="container">
+ <div class="row">
+     <!--<nav class="nav navbar-nav navbar-left">-->
+   <!--<nav class="nav navbar-nav navbar-right">-->
+       <div class="col-md-3">
+        <div class = "brand">
+         <h4>Bookers</h4>
+        </div>
+       </div>
+     <!--</nav>-->
 
-  <div class="container">
-    <div class="row">
-     <div class="cols-4 col-md-2">
-       <h4>Bookers</h4>
-     </div>
-        
-     <div class="cols-6 col-md-6"></div>
+      <!--<div class="col-md-3　">-->
+     <!--<div class = "justify-content: flex-end">-->
+      
+       
       <% if user_signed_in? %>
-       <ul>
-        <%= link_to "Home", user_path(current_user.id) %>
-       </ul>
-      
-       <ul>
-        <%= link_to "Users", users_path %>
-       </ul>
-      
-       <ul>
-        <%= link_to "Books", books_path %>
-       </ul>
-      
-       <ul>
-        <%= link_to "logout", destroy_user_session_path, method: :delete %>
-       </ul>
+        <i class="fas fa-home ">
+           <%= link_to "Home", user_path(current_user.id) %>
+        </i>
+        <i class="fas fa-user">
+          <%= link_to "Users", users_path %>
+        </i>
+        <i class="fas fa-book">
+          <%= link_to "Books", books_path %>
+         </i>
+         <i class="fas fa-sign-out-alt">
+          <%= link_to "logout", destroy_user_session_path, method: :delete %>
+         </i>
       <% else %>
-       <ul>
-        <%= link_to "Home", root_path %>
-       </ul>
-      
-       <ul>
-        <%= link_to "About", home_about_path %>
-       </ul>
-      
-      <ul>
-       <%= link_to "Sign up", new_user_registration_path %>
-      </ul>
-      
-      <ul>
-      <%= link_to "login", new_user_session_path %>
-      </ul>
-    </div>
+         <i class="fas fa-home">
+          <%= link_to "Home", root_path %>
+         </i>
+         <i class="fas fa-link">
+          <%= link_to "About", home_about_path %>
+         </i>
+         <i class="fas.fa-user-plus">
+          <%= link_to "Sign Up", new_user_registration_path %>
+         </i>
+         <i class="fas fa-sign-in-alt">
+          <%= link_to "Log in", new_user_session_path %>
+         </i>
+         
      <% end %>
+     <!--</div>-->
+      
      </div>
-    </div>
-   </div>
-  </nav>
+   </nav>
+  </div>
+  </div>
+ </nav>
     <%= yield %>
 
-  
+
   <fotter>
    <div class = "container">
     <div class = "row">
@@ -71,5 +76,6 @@
     </div>
    </div>
   </fotter>
-  
+
+
 </html>
