--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,21 +1,30 @@
 <div class = "container">
  <div class = "row">
   <div class = "col-xs-9">
+
+
+　　<% if @user.errors.any? %>
+    <%= @user.errors.count %>error
+    <% @user.errors.full_messages.each do |message| %>
+    <%= message %>
+    <% end %>
+　　<% end %>
+
     <h2>User info</h2>
 
 <%= form_with model:@user, local:true do |f| %>
 
-  <label for="inputName">Name</label> 
+  <label for="inputName">Name</label>
   <%= f.text_field :name, autofocus: true, id:"inputName"%> <br>
 
   <label for="inputImage">Image</label> <br>
   <%= attachment_image_tag @user, :profile_image, :fill, 60, 60 %>
   <%= f.attachment_field :profile_image, placeholder: "プロフィール画像" %> <br>
-  
-  <label for="inputintroduction">introduction</label> 
+
+  <label for="inputintroduction">introduction</label>
   <%= f.text_area :introduction, autofocus: true, id:"inputName"%> <br>
-  
-  <%= f.submit "変更を保存" %>
+
+  <%= f.submit "Update User" %>
 <% end %>
   </div>
  </div>
