--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,27 +2,30 @@
  <div class = "row">
 
 <%= render 'books/list', book: @book, user: @user %>
-
   <div class = "col-xs-9">
 
 
+
 <h1>Users</h1>
-<table>
-<tr>
-  <th>image</th><th>name</th>
-</tr>
+<table class="table">
+ <thead>
+   <tr>
+     <th scope="col"> image</th><th scope="col">name</th><th scope="col"></th>
+   </tr>
+ </thead>
 
 <% @users.each do |user| %>
-
- <tr>
-   <td><%= attachment_image_tag user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %></td>
-   <td> <%= user.name %></td>
-  <td><%= link_to "show", user_path(user.id) %></td>
- </tr>
+<tbody>
+   <tr>
+     <td><%= attachment_image_tag user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %></td>
+     <td> <%= user.name %></td>
+     <td><%= link_to "Show", user_path(user.id) %></td>
+   </tr>
+</tbody>
 
 <% end %>
 
 </table>
-  </div
+  </div>
  </div>
 </div>
