--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,10 +5,12 @@
   <div class = "col-xs-9">
 
 <h1>Books</h1>
-<table>
- <tr>
-  <th> </th><th>title</th><th>Opinion</th>
- </tr>
+<table class="table">
+ <thead>
+   <tr>
+     <th scope="col"></th><th scope="col">Title</th><th scope="col">Opinion</th>
+   </tr>
+ </thead>
 
 <% @books.each do |book| %>
 <tr>
