--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,30 +12,32 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
+<body>
+
 <nav class= "navbar text-white bg-dark">
  <div class="container">
  <div class="row">
      <!--<nav class="nav navbar-nav navbar-left">-->
    <!--<nav class="nav navbar-nav navbar-right">-->
-       <div class="col-md-3">
+       <div class="col-xs-3">
         <div class = "brand">
-         <h4>Bookers</h4>
+         <h4><%= link_to "Bookers", root_path %></h4>
         </div>
        </div>
      <!--</nav>-->
 
       <!--<div class="col-md-3　">-->
      <!--<div class = "justify-content: flex-end">-->
-      
-       
+
+
       <% if user_signed_in? %>
         <i class="fas fa-home ">
            <%= link_to "Home", user_path(current_user.id) %>
         </i>
-        <i class="fas fa-user">
+        <i class="fas fa-users">
           <%= link_to "Users", users_path %>
         </i>
-        <i class="fas fa-book">
+        <i class="fas fa-book-open">
           <%= link_to "Books", books_path %>
          </i>
          <i class="fas fa-sign-out-alt">
@@ -48,22 +50,25 @@
          <i class="fas fa-link">
           <%= link_to "About", home_about_path %>
          </i>
-         <i class="fas.fa-user-plus">
-          <%= link_to "Sign Up", new_user_registration_path %>
+         <i class="fas fa-user-plus">
+          <%= link_to "sign up", new_user_registration_path %>
          </i>
          <i class="fas fa-sign-in-alt">
-          <%= link_to "Log in", new_user_session_path %>
+          <%= link_to "login", new_user_session_path %>
          </i>
-         
+
      <% end %>
-     <!--</div>-->
-      
+
+
      </div>
    </nav>
   </div>
   </div>
  </nav>
-    <%= yield %>
+
+
+  <%= yield %>
+</body>
 
 
   <fotter>
