--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -3,7 +3,7 @@
 
 <%= render 'books/list', book: @booknew, user: @user %>
 
-  <div class = "col-xs-9">
+  <div class = "col-md-8 offset-md-1">
  <h1>Book detail</h1>
 
 <table class="table">
