--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -3,7 +3,7 @@
 
 <%= render 'books/list', book: @book, user: @user %>
 
-  <div class = "col-xs-9">
+  <div class = "col-md-8 offset-md-1">
 
 <h1>Books</h1>
 <table class="table">
