--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,7 @@
  <div class = "row">
 
 <%= render 'books/list', book: @book, user: @user %>
-  <div class = "col-xs-9">
+  <div class = "col-md-8 offset-md-1">
 
 
 
