--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
  <div class = "row">
 
 <%= render 'books/list', book: @book, user: @user %>
-  <div class = "col-xs-9">
+  <div class = "col-md-8 offset-md-1">
 
 <h1>Books</h1>
 <table class="table">
@@ -14,7 +14,7 @@
 
 <% @books.each do |book| %>
 <tr>
- <td><span><%= link_to attachment_image_tag(@user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg"), users_path(@user.id) %></span></td>
+ <td><span><%= link_to attachment_image_tag(@user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg"), user_path(@user.id) %></span></td>
  <td><span> <%= link_to book.title, book_path(book.id) %> </span></td>
  <td><span> <%= book.body %></span></td>
 </tr>
