--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,25 +13,28 @@
   </head>
 
 <body>
-
-<nav class= "navbar text-white bg-dark">
+ 
+<header>
+ 
+<nav class= "navbar navbar-expand-lg navbar-dark bg-dark" >
  <div class="container">
- <div class="row">
+    <!--<div class="row">-->
      <!--<nav class="nav navbar-nav navbar-left">-->
    <!--<nav class="nav navbar-nav navbar-right">-->
-       <div class="col-xs-3">
-        <div class = "brand">
-         <h4><%= link_to "Bookers", root_path %></h4>
+       <!--<div class="col-xs-3">-->
+        <div class = "navbar-brand">
+         <p>
+         <%= link_to "Bookers", root_path %>
+         </p>
         </div>
-       </div>
      <!--</nav>-->
 
       <!--<div class="col-md-3　">-->
      <!--<div class = "justify-content: flex-end">-->
-
-
       <% if user_signed_in? %>
-        <i class="fas fa-home ">
+      <div class ="nav-item">
+       <div class ="col-xs-3" >
+         <i class="fas fa-home ">
            <%= link_to "Home", user_path(current_user.id) %>
         </i>
         <i class="fas fa-users">
@@ -55,16 +58,17 @@
          </i>
          <i class="fas fa-sign-in-alt">
           <%= link_to "login", new_user_session_path %>
-         </i>
+          </i>
+       </div>
+      </div>
 
      <% end %>
-
-
-     </div>
-   </nav>
-  </div>
   </div>
  </nav>
+</header>
+
+
+     
 
 
   <%= yield %>
