--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,14 +23,14 @@ a:visited { color:white; text-decoration:none }
   padding: 0;
   box-sizing: border-box;
 }
-.navbar-brand p{
-  margin-top: 10px;
+.navbar-brand {
+  margin: 10px 0 0 60px;
 }
 
 nav{
   color: #fff;
 }
 
-.nav-item i{
-  padding-left: 10px;
+.nav-item{
+  padding-left: 60px;
 }
