--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,27 +13,18 @@
   </head>
 
 <body>
- 
+
 <header>
- 
+
 <nav class= "navbar navbar-expand-lg navbar-dark bg-dark" >
  <div class="container">
-    <!--<div class="row">-->
-     <!--<nav class="nav navbar-nav navbar-left">-->
-   <!--<nav class="nav navbar-nav navbar-right">-->
-       <!--<div class="col-xs-3">-->
-        <div class = "navbar-brand">
-         <p>
-         <%= link_to "Bookers", root_path %>
-         </p>
-        </div>
-     <!--</nav>-->
-
-      <!--<div class="col-md-3　">-->
-     <!--<div class = "justify-content: flex-end">-->
+   <div class = "navbar-brand">
+     <%= link_to "Bookers", root_path %>
+   </div>
+       <div class
       <% if user_signed_in? %>
       <div class ="nav-item">
-       <div class ="col-xs-3" >
+       <!--<div class ="col-xs-3" >-->
          <i class="fas fa-home ">
            <%= link_to "Home", user_path(current_user.id) %>
         </i>
@@ -60,16 +51,12 @@
           <%= link_to "login", new_user_session_path %>
           </i>
        </div>
-      </div>
+      <!--</div>-->
 
      <% end %>
   </div>
  </nav>
 </header>
-
-
-     
-
 
   <%= yield %>
 </body>
@@ -88,3 +75,5 @@
 
 
 </html>
+
+
