--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -30,7 +30,8 @@ a:visited { color:white; text-decoration:none }
 nav{
   color: #fff;
 }
-
-.nav-item{
-  padding-left: 60px;
+.fotter-logo{
+  margin: 20px 0  0 15px ;
 }
+
+
