--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
     <%= csp_meta_tag %>
     <!--<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">-->
     <div class="social"></div>
+
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
@@ -21,11 +22,12 @@
    <div class = "navbar-brand">
      <%= link_to "Bookers", root_path %>
    </div>
-       <div class
+     <div class ="row">
+
       <% if user_signed_in? %>
       <div class ="nav-item">
-       <!--<div class ="col-xs-3" >-->
-         <i class="fas fa-home ">
+       <div class ="col-xs-3" >
+         <i class="fas fa-home">
            <%= link_to "Home", user_path(current_user.id) %>
         </i>
         <i class="fas fa-users">
@@ -51,9 +53,10 @@
           <%= link_to "login", new_user_session_path %>
           </i>
        </div>
-      <!--</div>-->
+      </div>
 
      <% end %>
+     </div>
   </div>
  </nav>
 </header>
@@ -65,9 +68,9 @@
   <fotter>
    <div class = "container">
     <div class = "row">
-     <div class = "col-9"> </div>
-     <div class = "col-3">
-      <p>CopyRight Infratop.inc</p>
+     <div class = "col-4"> </div>
+     <div class = "col-4">
+      <div class ="fotter-logo">CopyRight Infratop.inc</div>
      </div>
     </div>
    </div>
