--- a/app/views/tops/about.html.erb
+++ b/app/views/tops/about.html.erb
@@ -1,1 +1,8 @@
-<h2>welcome to <i class="fas fa-book"></i>Bookers !!</h2>
+ <link rel="stylesheet" href="tops.scss" />
+
+<div class ="container">
+   <div class ="row">
+       <h1 class ="px-3 mx-auto">
+           welcome to <i class="fas fa-book"></i>Bookers !!</h1>
+   </div>
+</div>
