--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,15 +16,15 @@
 @import "bootstrap";
 @import 'font-awesome-sprockets';
 @import 'font-awesome';
-a:visited { color:white; text-decoration:none }
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
+
 .navbar-brand {
-  margin: 10px 0 0 60px;
+  color: #fff;
 }
 
 nav{
