--- a/app/assets/stylesheets/tops.scss
+++ b/app/assets/stylesheets/tops.scss
@@ -4,6 +4,8 @@
 @import "bootstrap";
 @import 'font-awesome-sprockets';
 @import 'font-awesome';
+// a:visited { color:white; text-decoration:none }
+
 .title{
   padding: 20px 0 5px 60px;
 }
