--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,15 +1,18 @@
+ <link rel="stylesheet" href="books.scss" />
+
 <div class = "container">
  <div class = "row">
 
 <%= render 'books/list', book: @book, user: @user %>
 
   <div class = "col-md-8 offset-md-1">
-
+<div class ="aa">
 <h1>Books</h1>
+</div>
 <table class="table">
 <thead>
   <tr>
-     <th>title</th> <th>Opinion</th>
+     <th></th><th>title</th> <th>Opinion</th>
   </tr>
 </thead>
 
