--- a/app/assets/stylesheets/books.scss
+++ b/app/assets/stylesheets/books.scss
@@ -1,3 +1,22 @@
 // Place all the styles related to the books controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+a:visited { color:black; text-decoration:none }
+
+.aa{
+  color: #000000;
+}
+
+.edit{
+  width: 250px;
+  height: 30px;
+//   font-size: 14px;
+  text-align: center;
+//   display: block;
+  background: #fff;
+//   margin-bottom: 10px;
+
+}
+.edit i{
+ text-align: center;
+}
