--- a/app/views/tops/top.html.erb
+++ b/app/views/tops/top.html.erb
@@ -5,35 +5,43 @@
 
 
 <div class = "container">
-  <div class="mx-auto" style="width: 720px;">
+  <!--<div class="mx-auto" style="width: 720px;">-->
 
   <div class = "row">
-     <div class ="title">
-       <div class ="title-nema">
-         <h1>welcome to<i class="fas fa-book"></i> Bookers !!</h1>
-       </div>
-       <div class ="title-text">
+     <div class="mx-auto col-11 col-sm-10 col-lg-8 col-xl-6">
+
+
+         <div class ="title">
+            <div class ="title-nema">
+              <h1>welcome to<i class="fas fa-book"></i> Bookers !!</h1>
+            </div>
+         <div class ="title-text">
            <p>In <i class="fas fa-book"></i>Bookers,<br>
               you can share and exchange your opinions , inpressions , and emotions<br>
               about various books!
            </p>
-       </div>
+         </div>
+        </div>
+
+
      </div>
   </div>
 
+<div class="btn-wrapper col-10 mx-auto">
+
    <div class ="row">
-    <!--<div class ="col-md-3">-->
-    <div class ="btn">
-       <button class = "botn-log-in">
-        <%= link_to "Log in", new_user_session_path %>
-       </button>
-       <button class = "botn-sign-up">
-       <%= link_to "Sign Up", new_user_registration_path %>
-       </button>
-    <!--</div>-->
+    <div class="mx-auto col-11 col-sm-10 col-lg-8 col-xl-6">
+          <a class="btn btn-info btn-sm btn-block mb-3 sign_in" href="/users/sign_in" class=" button1">Log in</a>
+      </div>
+   </div>
+
+   <div class ="row">
+    <div class="mx-auto col-11 col-sm-10 col-lg-8 col-xl-6">
+      <a class="btn btn-success btn-sm btn-block mb-3 sign_in" href="/users/sign_up" class="tag button2">Sign Up</a>
     </div>
    </div>
 
+</div>
   </div>
 </div>
-
+    <!--<div class ="col-md-3">-->
