--- a/app/assets/stylesheets/books.scss
+++ b/app/assets/stylesheets/books.scss
@@ -6,17 +6,10 @@ a:visited { color:black; text-decoration:none }
 .aa{
   color: #000000;
 }
-
-.edit{
-  width: 250px;
-  height: 30px;
-//   font-size: 14px;
-  text-align: center;
-//   display: block;
-  background: #fff;
-//   margin-bottom: 10px;
+i{
 
 }
-.edit i{
- text-align: center;
+.btn{
+  width: 100%;
+  height: 30px;
 }
