--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -5,29 +5,31 @@
 
 <%= render 'books/list', book: @book, user: @user %>
 
-  <div class = "col-md-8 offset-md-1">
-<div class ="aa">
-<h1>Books</h1>
-</div>
-<table class="table">
+
+<div class = "col-md-8 offset-md-1">
+    <h1>Books</h1>
+      <table class="table table-hover table-inverse">
+
 <thead>
   <tr>
-     <th></th><th>title</th> <th>Opinion</th>
+     <th></th>
+     <th>title</th>
+     <th>Opinion</th>
+     <th colspan="3"></th>
   </tr>
 </thead>
 
-<% @books.each do |book| %>
 <tbody>
+<% @books.each do |book| %>
 <tr>
-  <td><span><%= link_to attachment_image_tag(book.user, :profile_image, :fill, 40, 40, format: 'jpeg', fallback: "no_image.jpg"), user_path(book.user_id) %></span></td>
-
-  <td><span> <%= link_to book.title, book_path(book.id) %> </span></td>
-  <td><span> <%= book.body %></span></td>
+  <th><span><%= link_to attachment_image_tag(book.user, :profile_image, :fill, 40, 40, format: 'jpeg', fallback: "no_image.jpg"), user_path(book.user_id) %></span></th>
+  <th><span> <%= link_to book.title, book_path(book.id) %> </span></th>
+  <th><span> <%= book.body %></span></th>
 </tr>
-</tbody>
 <% end %>
+</tbody>
 
 </table>
+</div>
   </div>
  </div>
-</div>
