--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,8 +1,23 @@
+<head>
+    <style>
+     .btn{
+       width: 60px;
+     }
+    </style>
+  </head>
+
+
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0">
+
+
+
 <h2>Sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
-  
+
    <div class="field">
     <%= f.label :name %><br />
     <%= f.text_field :name, autofocus: true, autocomplete: "name" %>
@@ -27,8 +42,13 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <input type="submit" name="commit" value="Sign up" class="btn btn-sm btn-success" data-disable-with="Sign up">
   </div>
-<% end %>
+  
+  <%= link_to "Log in", new_session_path(resource_name) %><br />
 
-<%= render "devise/shared/links" %>
+<% end %>
+    </div>
+  </div>
+</div>
+
