--- a/app/views/tops/about.html.erb
+++ b/app/views/tops/about.html.erb
@@ -2,7 +2,7 @@
 
 <div class ="container">
    <div class ="row">
-       <h1 class ="px-3 mx-auto">
+       <h1 class ="about px-3 mx-auto">
            welcome to <i class="fas fa-book"></i>Bookers !!</h1>
    </div>
 </div>
