--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,20 +5,25 @@
   <div class = "col-md-8 offset-md-1">
 
 <h1>Books</h1>
-<table class="table">
+<table class="table table-hover table-inverse">
  <thead>
-   <tr>
-     <th scope="col"></th><th scope="col">Title</th><th scope="col">Opinion</th>
-   </tr>
- </thead>
+  <tr>
+     <th></th>
+     <th>title</th>
+     <th>Opinion</th>
+     <th colspan="3"></th>
+  </tr>
+</thead>
 
+<tbody>
 <% @books.each do |book| %>
 <tr>
- <td><span><%= link_to attachment_image_tag(@user, :profile_image, :fill, 40, 40, format: 'jpeg', fallback: "no_image.jpg"), user_path(@user.id) %></span></td>
- <td><span> <%= link_to book.title, book_path(book.id) %> </span></td>
- <td><span> <%= book.body %></span></td>
+ <th><span><%= link_to attachment_image_tag(@user, :profile_image, :fill, 40, 40, format: 'jpeg', fallback: "no_image.jpg"), user_path(@user.id) %></span></th>
+ <th><span> <%= link_to book.title, book_path(book.id) %> </span></th>
+ <th><span> <%= book.body %></span></th>
 </tr>
 <% end %>
+</tbody>
 
 </table>
   </div>
